updates to models
