# src/PrhApi.Models.CodeGen/Model/ShareSeries.cs
@@ -42,9 +42,9 @@ namespace PrhApi.Models.CodeGen.Model
         /// </summary>
         /// <param name="shareSeriesClass">shareSeriesClass (required).</param>
         /// <param name="numberOfShares">numberOfShares (required).</param>
-        /// <param name="shareValues">shareValues (required).</param>
+        /// <param name="shareValue">shareValue (required).</param>
         /// <param name="shareValueCurrency">shareValueCurrency.</param>
-        public ShareSeries(string shareSeriesClass = default(string), int numberOfShares = default(int), decimal shareValues = default(decimal), string shareValueCurrency = default(string))
+        public ShareSeries(string shareSeriesClass = default(string), int numberOfShares = default(int), decimal shareValue = default(decimal), string shareValueCurrency = default(string))
         {
             // to ensure "shareSeriesClass" is required (not null)
             if (shareSeriesClass == null)
@@ -53,7 +53,7 @@ namespace PrhApi.Models.CodeGen.Model
             }
             this.ShareSeriesClass = shareSeriesClass;
             this.NumberOfShares = numberOfShares;
-            this.ShareValues = shareValues;
+            this.ShareValue = shareValue;
             this.ShareValueCurrency = shareValueCurrency;
         }
 
@@ -70,10 +70,10 @@ namespace PrhApi.Models.CodeGen.Model
         public int NumberOfShares { get; set; }
 
         /// <summary>
-        /// Gets or Sets ShareValues
+        /// Gets or Sets ShareValue
         /// </summary>
-        [DataMember(Name = "shareValues", IsRequired = true, EmitDefaultValue = true)]
-        public decimal ShareValues { get; set; }
+        [DataMember(Name = "shareValue", IsRequired = true, EmitDefaultValue = true)]
+        public decimal ShareValue { get; set; }
 
         /// <summary>
         /// Gets or Sets ShareValueCurrency
@@ -91,7 +91,7 @@ namespace PrhApi.Models.CodeGen.Model
             sb.Append("class ShareSeries {\n");
             sb.Append("  ShareSeriesClass: ").Append(ShareSeriesClass).Append("\n");
             sb.Append("  NumberOfShares: ").Append(NumberOfShares).Append("\n");
-            sb.Append("  ShareValues: ").Append(ShareValues).Append("\n");
+            sb.Append("  ShareValue: ").Append(ShareValue).Append("\n");
             sb.Append("  ShareValueCurrency: ").Append(ShareValueCurrency).Append("\n");
             sb.Append("}\n");
             return sb.ToString();
@@ -138,8 +138,8 @@ namespace PrhApi.Models.CodeGen.Model
                     this.NumberOfShares.Equals(input.NumberOfShares)
                 ) && 
                 (
-                    this.ShareValues == input.ShareValues ||
-                    this.ShareValues.Equals(input.ShareValues)
+                    this.ShareValue == input.ShareValue ||
+                    this.ShareValue.Equals(input.ShareValue)
                 ) && 
                 (
                     this.ShareValueCurrency == input.ShareValueCurrency ||
@@ -162,7 +162,7 @@ namespace PrhApi.Models.CodeGen.Model
                     hashCode = (hashCode * 59) + this.ShareSeriesClass.GetHashCode();
                 }
                 hashCode = (hashCode * 59) + this.NumberOfShares.GetHashCode();
-                hashCode = (hashCode * 59) + this.ShareValues.GetHashCode();
+                hashCode = (hashCode * 59) + this.ShareValue.GetHashCode();
                 if (this.ShareValueCurrency != null)
                 {
                     hashCode = (hashCode * 59) + this.ShareValueCurrency.GetHashCode();
